# rti_minimal

./: CMakeLists.txt  README.md  build.sh  buildMac.sh  build_arm.sh  build_x86.sh  compile.sh  gencode  gencode.cache
cmake/: FindRTI.cmake
idl/: HelloWorld.xml  Velocities.idl
include/: Velocities.h  VelocitiesPlugin.h  VelocitiesSupport.h
src/: HelloWorld.h  HelloWorldPlugin.h  HelloWorldSupport.h  HelloWorld_publisher.cxx  HelloWorld_subscriber.cxx  USER_QOS_PROFILES.xml  Velocities.cxx  VelocitiesPlugin.cxx  VelocitiesSupport.cxx  Velocities_publisher.cxx  Velocities_subscriber.cxx  app_makefile  makefile_HelloWorld_x64Linux3gcc4.8.2
